Fix z-index for the loading

--- a/front-end/css/performance.css
+++ b/front-end/css/performance.css
@@ -31,7 +31,7 @@ body, html {
   backdrop-filter: blur(5px); /* Blur effect for the background */
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* High z-index to be on top of other content */
+  z-index: 999999; /* High z-index to be on top of other content */
 }
 
 .loading-text {
